# 3d-print-agent

./: AGENTS.md  IDEA.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
src/3d_print_agent/: __init__.py  cli.py  octoprint_client.py  vision_monitor.py
tests/: test_cli.py  test_octoprint_client.py  test_vision_monitor.py
